--- a/style.css
+++ b/style.css
@@ -4,19 +4,16 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 /* Body Style */
 body {
     color: #39a6b2;
     font-family: Arial, Helvetica, sans-serif;
   }
-
 /* Header Style*/
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
 }
-
 /* header h1 style */
 header h1 {
     font-weight: bold;
@@ -25,38 +22,32 @@ header h1 {
     margin: 0;
     display: inline;   
 }
-
 /* header a styles */
 header a {
     text-decoration: none;
     color: #fce138;
 }
-
 /* header nav style */
 header nav {
     float: right;
     margin: 7px 0;
 }
-
 /* header nav ul li styles */
 header nav ul li {
     display: inline;
 }
-
 /* header nav ul li a style */
 header nav ul li a {
     margin: 0 30px;
     font-weight: lighter;
     font-size: 22px;
 }
-
 /* footer styles */
 footer {
     background: #fce138;
     width: 100%;
     padding: 40px 35px;
 }
-
 /* footer h2 styles */
 footer h2 {
     display: inline;
@@ -64,15 +55,33 @@ footer h2 {
     font-size: 30px;
     margin: 0;
 }
-
 /* footer div styles */
 footer div {
     float: right;
     line-height: 1.5;
     text-align: right;
 }
-
 /* footer a styles */
 footer a {
     color: #024e76;
+}
+/* Hero Style */
+.hero {
+    background-image: url("./images/hero-bg.jpg");
+    height: 600px;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+/* Hero Form Style */
+.hero-form {
+    background-color: #fce138;
+    padding: 20px;
+    width: 500px;
+    color: #024e76;
+    border: solid 3px #024e76;
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+
 }
