--- a/style.css
+++ b/style.css
@@ -206,4 +206,39 @@ footer a {
 .text-left {
     text-align: left;
 }
-
+.center-align {
+    text-align: center;
+}
+.contact {
+    background: #024e76;
+    text-align: center;
+}
+.contact h2 {
+    color: #fce138;
+    border-bottom: 5px teal;
+}
+.contact-info iframe {
+    width: 400px;
+    height: 400px;
+}
+.contact-info div {
+    width: 410px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px;
+    color: white;
+}
+.contact-info h3 {
+    color: #fce138;
+    font-size: 32px;
+  }
+  .contact-info p, .contact-info address {
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 20px;
+    font-style: normal;
+  }
+  .contact-info a {
+    color: #fce138;
+  }
