added image to hero section added some html

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ footer a {
 }
 /* Hero Style */
 .hero {
-    background-image: url("./images/hero-bg.jpg");
+    background-image: url("./images/flipped-hero-image.jpg");
     height: 600px;
     background-size: cover;
     background-position: center;
