--- a/style.css
+++ b/style.css
@@ -13,14 +13,17 @@ body {
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 /* header h1 style */
 header h1 {
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
-    margin: 0;
-    display: inline;   
+    margin: 0; 
+      
 }
 /* header a styles */
 header a {
@@ -29,7 +32,6 @@ header a {
 }
 /* header nav style */
 header nav {
-    float: right;
     margin: 7px 0;
 }
 /* header nav ul li styles */
