--- a/style.css
+++ b/style.css
@@ -36,30 +36,35 @@ header nav {
 }
 /* header nav ul li styles */
 header nav ul li {
-    display: inline;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
 }
 /* header nav ul li a style */
 header nav ul li a {
     margin: 0 30px;
     font-weight: lighter;
-    font-size: 22px;
+    font-size: 1.55vw;
 }
 /* footer styles */
 footer {
     background: #fce138;
     width: 100%;
     padding: 40px 35px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 /* footer h2 styles */
 footer h2 {
-    display: inline;
     color: #024e76;
     font-size: 30px;
     margin: 0;
 }
 /* footer div styles */
 footer div {
-    float: right;
     line-height: 1.5;
     text-align: right;
 }
@@ -70,21 +75,34 @@ footer a {
 /* Hero Style */
 .hero {
     background-image: url("./images/flipped-hero-image.jpg");
-    height: 600px;
     background-size: cover;
     background-position: center;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 /* Hero Form Style */
 .hero-form {
     background-color: #fce138;
     padding: 20px;
-    width: 500px;
     color: #024e76;
     border: solid 3px #024e76;
-    position: absolute;
-    bottom: 120px;
-    right: 140px;
+    margin: 3.5%;
+    width: 40%;
+}
+/*hero Call to Action */
+.hero-cta {
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color: #ffffff;
+    font-size: 18px;
+    line-height: 1.3;
+}
+.hero-cta h2 {
+    font-style: italic;
+    font-size: 55px;
+    color: #fce138;
 }
 /* <h3> style */
 .hero-form h3 {
