--- a/style.css
+++ b/style.css
@@ -141,10 +141,11 @@ footer a {
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
   }
   .primary-border {
     border-color: #fce138;
@@ -153,19 +154,16 @@ footer a {
     border-color: #39a6b2;
   }
 /* what-we-do section */
-.intro {
-    text-align: center;
-}
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 /* what-you-do section */
 .steps {
-    text-align: center;
     background: #fce138;
 }
 .steps div {
@@ -189,7 +187,6 @@ footer a {
 }
 /* Trainers Section */
 .trainers {
-    text-align: center;
 }
 .trainer {
     width: 900px;
@@ -231,7 +228,6 @@ footer a {
 }
 .contact {
     background: #024e76;
-    text-align: center;
 }
 .contact h2 {
     color: #fce138;
@@ -261,4 +257,7 @@ footer a {
   }
   .contact-info a {
     color: #fce138;
+  }
+  .flex-row {
+      display: flex;
   }
