--- a/style.css
+++ b/style.css
@@ -207,36 +207,37 @@ footer a {
     margin-right: 20px;
 }
 /* Trainers Section */
-.trainers {
-}
 .trainer {
-    width: 900px;
-    margin: 0 auto 30px auto;
+    margin: 20px;
+    flex: 1;
+}
+.trainers {
+    width: 100%;
+    margin: 0 auto;
     background: #024e76;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
     color: #fce138;
-    overflow: auto;
 }
 .trainer img {
-    width: 35%;
-    float: left;
+    width: 100%; 
 }
 .trainer-bio {
-    padding: 35px;
-    float: left;
-    width: 65%;
+    padding: 25px;
+    line-height: 1.3;
 }
 .trainer-bio h3 {
-    font-size: 32px;
-    margin-bottom: 8px;
+    font-size: 28px;
+    
 }
 .trainer-bio h4 {
     font-weight: lighter;
-    font-size: 26px;
-    margin-bottom: 25px;
+    font-size: 22px;
+    margin-bottom: 15px;
 }
 .trainer-bio p {
-    font-size: 17px;
-    line-height: 1.3;
+    font-size: 17px; 
 }
 .text-right {
     text-align: right;
