--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ header nav ul li {
 }
 /* header nav ul li a style */
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -80,6 +80,7 @@ footer a {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 /* Hero Form Style */
 .hero-form {
@@ -97,7 +98,7 @@ footer a {
     margin: 3.5%;
     color: #ffffff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 .hero-cta h2 {
     font-style: italic;
@@ -139,7 +140,7 @@ footer a {
 /* section titles and borders */
 
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
@@ -304,4 +305,20 @@ footer a {
   }
   .flex-row {
       display: flex;
+  }
+  /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALL DEVICES */
+  @media screen and (max-width: 980px) {
+      header h1 a {
+          color: tomato;
+      }
+  }
+  @media screen and (max-width: 768px) {
+      header h1 {
+          font-size: 80px;
+      }
+  }
+  @media screen and (max-width: 575px) {
+      header h1 {
+          font-size: 100px;
+      }
   }
