--- a/style.css
+++ b/style.css
@@ -306,6 +306,17 @@ footer a {
   .flex-row {
       display: flex;
   }
+  /*grid SECTION */
+  .service-grid-container {
+      display: grid;
+  }
+  .service-grid-item {
+      width: 200px;
+      height: 50px;
+      background-color: orange;
+      border: solid;
+      color: black;
+  }
   /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALL DEVICES */
   @media screen and (max-width: 980px) {
       header {
