--- a/style.css
+++ b/style.css
@@ -308,14 +308,27 @@ footer a {
   }
   /*grid SECTION */
   .service-grid-container {
+      max-width: 940px;
       display: grid;
+      margin: 0 auto;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(3, 100px);
+      grid-gap: 10px;
+      grid-auto-flow: row;
   }
   .service-grid-item {
-      width: 200px;
-      height: 50px;
       background-color: orange;
+      padding: 1em;
       border: solid;
       color: black;
+  }
+  .box1 {
+      grid-column: 1/2;
+      grid-row: 1/3;
+  }
+  .box2 {
+      grid-column: 3/4;
+      grid-row: 1/-1;
   }
   /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALL DEVICES */
   @media screen and (max-width: 980px) {
