added fading to hover buttons

--- a/style.css
+++ b/style.css
@@ -11,11 +11,19 @@ body {
   }
 /* Header Style*/
 header {
+    top: 0;
+    position: sticky;
+    position: -webkit-sticky;
     padding: 20px 35px;
     background-color: #39a6b2;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    background-image: url("./images/flipped-hero-image.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 /* header h1 style */
 header h1 {
@@ -23,7 +31,7 @@ header h1 {
     font-size: 36px;
     color: #fce138;
     margin: 0; 
-      
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);  
 }
 /* header a styles */
 header a {
@@ -47,6 +55,13 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);  
+}
+header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
 }
 /* footer styles */
 footer {
@@ -81,6 +96,8 @@ footer a {
     justify-content: center;
     flex-wrap: wrap;
     align-items: flex-start;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 /* Hero Form Style */
 .hero-form {
@@ -90,6 +107,8 @@ footer a {
     border: solid 3px #024e76;
     margin: 3.5%;
     width: 40%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
 }
 /*hero Call to Action */
 .hero-cta {
@@ -104,6 +123,7 @@ footer a {
     font-style: italic;
     font-size: 55px;
     color: #fce138;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);  
 }
 /* <h3> style */
 .hero-form h3 {
@@ -113,6 +133,9 @@ footer a {
 /* <p> style */
 .hero-form p {
     margin: 5px 0 15px 0;
+}
+.hero-form button:hover {
+    background-color: #39a6b2;
 }
 /* form-input style */
 .form-input {
@@ -124,6 +147,12 @@ footer a {
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
+}
+.form-input:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
 }
 /* hero-form label */
 .hero-form label {
@@ -136,6 +165,7 @@ footer a {
     padding: 10px 20px;
     font-size: 16px;
     color: #fce138;
+    border-radius: 10px;
 }
 /* section titles and borders */
 
@@ -168,11 +198,17 @@ footer a {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+    border-bottom: 1px solid #39a6b2;
+}
+.step:last-child {
+    border-bottom: none;
+}
+.step:nth-child(even) {
+    border-bottom: 1px solid #39a6b2;
 }
 .steps {
     background: #fce138;
@@ -274,17 +310,17 @@ footer a {
 .contact-info h3 {
     color: #fce138;
     font-size: 32px;
-  }
-  .contact-info p, .contact-info address {
+}
+.contact-info p, .contact-info address {
     margin: 20px 0;
     line-height: 1.5;
     font-size: 16px;
     font-style: normal;
-  }
-  .contact-info a {
+}
+.contact-info a {
     color: #fce138;
-  }
-  .contact-form input, .contact-form textarea {
+}
+.contact-form input, .contact-form textarea {
       border: 1px solid #024e76;
       display: b;
       padding: 7px 15px;
@@ -293,8 +329,23 @@ footer a {
       width: 100%;
       margin-bottom: 15px;
       margin-top: 5px;
-  }
-  .contact-form button {
+      border-radius: 10px;
+}
+.contact-form input {
+    background-color: rgba(255,255,255, 0.75);
+}
+.contact-form input:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
+}
+.contact-form textarea {
+    background-color: rgba(255,255,255, 0.75);
+}
+.contact-form textarea:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
+}
+.contact-form button {
       width: 100%;
       border: none;
       background: #fce138;
@@ -302,12 +353,17 @@ footer a {
       text-align: center;
       padding: 15px 0;
       font-size: 16px;
-  }
-  .flex-row {
-      display: flex;
-  }
-  /* SERVICE grid SECTION */
-  .services {
+      border-radius: 10px;
+}
+.contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
+}
+.flex-row {
+   display: flex;
+}
+/* SERVICE grid SECTION */
+.services {
       background: #fce138;
   }
   .service-grid-container {
@@ -363,6 +419,7 @@ footer a {
       header {
           padding-bottom: 0;
           justify-content: center;
+          position: relative;
       }
       header h1 {
           width: 100%;
