--- a/style.css
+++ b/style.css
@@ -327,11 +327,49 @@ footer a {
 .trainer-bio p {
     font-size: 17px; 
 }
+.trainer-1 {
+    background-image: url("./images/trainer-1.jpg");
+}
+.trainer-2 {
+    background-image: url("./images/trainer-2.jpg");
+}
+.trainer-3{
+    background-image: url("./images/trainer-3.jpg");
+}
 .text-right {
     text-align: right;
 }
 .text-left {
     text-align: left;
+}
+.trainer-img {
+    width: 100%;
+    min-height: 300px;
+    display: flex;
+    padding: 15px;
+    align-items: flex-end;
+    position: relative;
+}
+.trainer-img::after {
+    content: "";
+    height: 100%;
+    width: 100%;
+    background: rgba(252, 225, 56, 0.3);
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.trainer-img h3 {
+    position: relative;
+    z-index: 9998;
+    font-size: 28px;
+    margin-bottom: 5px;
+}
+.trainer-img h4 {
+    position: relative;
+    z-index: 9997;
+    font-size: 22px;
+    margin-bottom: 5px;
 }
 .center-align {
     text-align: center;
